# caffstore

./: .gitignore  README.md  package-lock.json  package.json
backend/: package.json
backend/src/parser/: CMakeLists.txt  Caff.cpp  Caff.h  CaffAnimation.cpp  CaffAnimation.h  CaffCredits.cpp  CaffCredits.h  CaffHeader.cpp  CaffHeader.h  Ciff.cpp  Ciff.h  CiffContent.cpp  CiffContent.h  CiffHeader.cpp  CiffHeader.h  Converter.cpp  Converter.h  Dockerfile  FileReader.cpp  FileReader.h  GifCreator.cpp  GifCreator.h  GifWriter.cpp  GifWriter.h  Makefile  README.md  RGB.h  VectorHandler.cpp  VectorHandler.h  gif.cpp  gif.h  main.cpp  unittest.cpp
backend/src/parser/build_test/: parser
backend/src/parser/docs/: caff_constraints.drawio  parser.drawio
backend/src/server/: README.md
frontend/: .eslintignore  .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  firebase.ts  setupProxy.js  types.ts
frontend/src/components/: adminAppBar.tsx  adminUserListComponents.tsx  appBar.tsx  caffPreview.tsx  caffProductsComponent.tsx  cartItem.tsx  commentComponent.tsx  header.tsx  responsiveAppBar.tsx
frontend/src/constants/: color.ts  pages.ts  theme.ts
frontend/src/pages/: Cart.tsx  caffPreview.tsx  error.tsx  products.tsx  signIn.tsx  signUp.tsx  signout.tsx  upload.tsx  welcome.tsx
frontend/src/routing/: Admin.tsx  AdminLayout.tsx  Customer.tsx  CustomerLayout.tsx
frontend/src/services/: authService.tsx  caffService.tsx  commentService.tsx  httpService.tsx
frontend/src/stores/: CaffStore.ts  RootStore.ts  (+2 more)
(+43 files in other folders)
